# rgb_evo_view

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  build_animation.py  implementation_plan.md  pydoc-markdown.yml  pyproject.toml  runner.py
docs/: DECISION_LOG.md  TECHNICAL_DOCS.md  TODO.md
docs/api/: animate.md  config.md  creature.md  energy.md  food.md  genome.md  locomotion.md  mating.md  recording.md  seeding.md  simulation.md  stats.md  world.md
rgb_evo_view/: __init__.py  config.py  creature.py  energy.py  food.py  genome.py  locomotion.py  mating.py  recording.py  run_loader.py  seeding.py  simulation.py  world.py
scripts/: generate_api_docs.sh
simulation_configs/: default.toml
tests/: conftest.py  test_energy.py  test_genome.py  test_interactive_model.py  test_mating.py  test_recording.py  test_run_loader.py  test_simulation.py  test_world.py
visualizer/: animate.py  interactive.py  interactive_model.py  stats.py
