[project]
name = "rgb-evo-view"
version = "0.1.0"
description = ""
authors = [
    {name = "ZWMiller"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pre-commit (>=3.7.0)",
    "ruff (>=0.8.0)",
    "pydoc-markdown (>=4.8.2,<5.0.0) ; python_version >= \"3.13\" and python_version < \"4.0\"",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# E501 = line too long; handled by ruff format, not lint
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rgb_evo_view"]
